* [*] [internal] Editor: Only register core blocks when `onlyCoreBlocks` capability is enabled [https://github.com/wordpress-mobile/gutenberg-mobile/pull/5293]
* [**] [internal] Disable StockPhoto and Tenor media sources when Jetpack features are removed [#19826]
* [*] [Jetpack-only] Fixed a bug where analytics calls weren't synced to the user account. [#19926]

21.4
-----
* [*] Fixed an issue where publishing Posts and Pages could fail under certain conditions. [#19717]
* [*] Share extension navigation bar is no longer transparent [#19700]
* [***] [Jetpack-only] Adds a smooth, opt-in transition to the Jetpack app for users migrating from the WordPress app. [#19759]
* [***] You can now migrate your site content to the Jetpack app without a hitch. [#19759]
* [**] [internal] Upgrade React Native from 0.66.2 to 0.69.4 [https://github.com/wordpress-mobile/gutenberg-mobile/pull/5193]
* [*] [internal] When a user migrates to the Jetpack app and allows notifications, WordPress app notifications are disabled. [#19616, #19611, #19590]
* [*] Reader now scrolls to the top if the tab bar button is tapped. [#19769]
* [*] [Internal] Update WordPressShared, WordPressKit, and WordPressAuthenticator to their latest versions. [#19643]

21.3
-----
* [*] Fixed a minor UI issue where the segmented control under My SIte was being clipped when "Home" is selected. [#19595]
* [*] Fixed an issue where the site wasn't removed and the app wasn't refreshed after disconnecting the site from WordPress.com. [#19634]
* [*] [internal] Fixed an issue where Jetpack extensions were conflicting with WordPress extensions. [#19665]

21.2
-----
* [*] [internal] Refactored fetching posts in the Reader tab. [#19539]
* [*] Fixed an issue where the message "No media matching your search" for the media picker is not visible [#19555]

21.1
-----